<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".QuizActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBackToMenu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_to_menu"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_keyboard_return_24"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvQuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/jalan_panjang"
        android:text="Question 1 of 10"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#D5E1EBFF"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionNumber">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp">

            <ImageView
                android:id="@+id/imgFlag"
                android:layout_width="224dp"
                android:layout_height="168dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/country_flag"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/jalan_panjang"
                android:text="@string/which_country_is_this"
                android:textColor="#19455F"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgFlag" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnChoiceA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_choice_a_style"
                android:fontFamily="@font/jalan_panjang"
                android:padding="4dp"
                android:text="Ukraine"
                android:textAlignment="center"
                android:textColor="#19455F"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/imgFlag"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imgFlag"
                app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnChoiceB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_choice_b_style"
                android:fontFamily="@font/jalan_panjang"
                android:padding="4dp"
                android:text="Australia"
                android:textAlignment="center"
                android:textColor="#19455F"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/btnChoiceA"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/btnChoiceA"
                app:layout_constraintTop_toBottomOf="@+id/btnChoiceA" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnChoiceC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_choice_c_style"
                android:fontFamily="@font/jalan_panjang"
                android:padding="4dp"
                android:text="Indonesia"
                android:textAlignment="center"
                android:textColor="#19455F"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/btnChoiceB"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/btnChoiceB"
                app:layout_constraintTop_toBottomOf="@+id/btnChoiceB" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnChoiceD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_choice_d_style"
                android:fontFamily="@font/jalan_panjang"
                android:padding="4dp"
                android:text="India"
                android:textAlignment="center"
                android:textColor="#19455F"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/btnChoiceC"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/btnChoiceC"
                app:layout_constraintTop_toBottomOf="@+id/btnChoiceC" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/btn_play_style"
                android:clickable="true"
                android:contentDescription="@string/Next"
                android:focusable="true"
                android:fontFamily="@font/jalan_panjang"
                android:text="@string/Next"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnChoiceD"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/btnChoiceD"
                app:layout_constraintTop_toBottomOf="@+id/btnChoiceD" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>